// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/pages/EditPlan/Connected.tsx Connected 正常に表示されている 1`] = `
<Memo()
  calendars={Array []}
  input={
    Object {
      "date": "",
      "title": "",
    }
  }
  items={Array []}
  kind=""
  navigation={
    Object {
      "navigate": [MockFunction],
      "setParams": [MockFunction],
    }
  }
  onHome={[Function]}
  onIcons={[Function]}
  onInput={[Function]}
  onSave={[Function]}
  refreshData={[MockFunction]}
  route={
    Object {
      "params": Object {
        "itemId": "1",
        "refresh": "",
      },
    }
  }
  title="test"
/>
`;

exports[`components/pages/EditPlan/Connected.tsx EditPlan 正常に表示されている 1`] = `
<Memo()
  calendars={Array []}
  items={Array []}
  kind="park"
  navigation={
    Object {
      "navigate": [MockFunction],
      "setParams": [MockFunction],
    }
  }
  refreshData={[MockFunction]}
  route={
    Object {
      "params": Object {
        "itemId": "1",
        "refresh": "",
      },
    }
  }
  title="test"
/>
`;
